# simulator

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  filter_readme.sed  justfile  release.toml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
benches/: image.rs
doc/: drawing-examples.md  releasing.md
examples/: analog-clock.rs  audio.rs  chaining.rs  hello-world.rs  image-sub-image.rs  input-handling-multiple.rs  input-handling.rs  line-thickness.rs  multiple-displays.rs  multiple-windows.rs  png-base64.rs  png-file.rs  primitives-ellipse.rs  primitives-stroke-alignment.rs  primitives-stroke.rs  progress.rs  sdl-audio.rs  text-custom-font.rs  text-fonts-signs.rs  text-fonts.rs  text-multiline.rs  text-transparent.rs  themes.rs  thick-triangles.rs
src/: display.rs  framebuffer.rs  lib.rs  output_image.rs  output_settings.rs  theme.rs  window.rs
src/window/: mod.rs  multi_window.rs  sdl.rs  sdl_window.rs
