[package]
version = "0.3.0-beta.1"
name = "embedded-graphics-simulator"
description = "Embedded graphics simulator"
authors = ["James Waples <james@wapl.es>"]
repository = "https://github.com/embedded-graphics/simulator"
documentation = "https://docs.rs/embedded-graphics-simulator"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "simulator", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    "/.circleci/",
    "/.github/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/simulator", branch = "master" }

[dependencies]
image = "0.23.0"
base64 = "0.13.0"

[dependencies.sdl2]
version = "0.32.2"
optional = true

[dependencies.embedded-graphics]
version = "0.7.0-beta.1"

[features]
default = [ "with-sdl" ]
fixed_point = [ "embedded-graphics/fixed_point" ]
with-sdl = [ "sdl2" ]
