[package]
version = "0.6.0"
name = "embedded-graphics-simulator"
description = "Embedded graphics simulator"
authors = ["James Waples <james@wapl.es>", "Ralf Fuest <mail@rfuest.de>"]
repository = "https://github.com/embedded-graphics/simulator"
documentation = "https://docs.rs/embedded-graphics-simulator"
categories = ["embedded", "no-std"]
keywords = ["embedded-graphics", "simulator", "graphics", "embedded"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = [
    "/.circleci/",
    "/.github/",
    ".gitignore",
]

[badges]
circle-ci = { repository = "embedded-graphics/simulator", branch = "master" }

[dependencies]
image = { version = "0.25.1", default-features=false, features=["png"] }
base64 = "0.22.1"
embedded-graphics = "0.8.1"
sdl2 = { version = "0.37.0", optional = true }
ouroboros = { version = "0.18.0", optional = true }

[features]
default = ["with-sdl"]
fixed_point = ["embedded-graphics/fixed_point"]
with-sdl = ["sdl2", "ouroboros"]
